--- a/src/main/resources/templates/eventmanagement.html
+++ b/src/main/resources/templates/eventmanagement.html
@@ -171,7 +171,8 @@
                                                 type="button"
                                                 style="margin-left: 0px;margin-right: 5px;background: var(--purple);"
                                                 data-toggle="modal"
-                                                th:attr="data-target=${'#assignSuperFrogModal' + event.id}">Assign</button>
+                                                th:attr="data-target=${'#assignSuperFrogModal' + event.id}"
+                                                th:href="@{/eventmanagement/assign/${event.getRequestingUserEmail()}}">Assign</button>
                                         <a th:if="${!event.assignedSuperFrogEmail.equals('')}"
                                            th:href="@{/eventmanagement/finish/__${event.id}__}">
                                             <button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;background: var(--green);">Finished</button>
