--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -68,6 +68,65 @@
                     </ul>
                 </div>
             </nav>
+
+            <!-- Customer Upcoming events table-->
+            <!-- Only customers will see this, and it will only show if the list of upcoming approved events is not empty -->
+            <div sec:authorize="hasAuthority('CUSTOMER')" class="container-fluid" th:if="${!myUpcomingEvents.isEmpty()}">
+                <h3 class="text-dark mb-1">My Upcoming Events</h3>
+                <div class="card shadow">
+                    <div class="card-body">
+                        <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
+                            <table class="table my-0" id="dataTable">
+                                <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Title</th>
+                                    <th>Date</th>
+                                    <th>Start Time</th>
+                                    <th>End Time</th>
+                                    <th>SuperFrog Email</th>
+                                    <th class="text-center">Operation</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="event: ${myUpcomingEvents}">
+                                    <td th:text="${event.id}"></td>
+                                    <td th:text="${event.title}"></td>
+                                    <td th:text="${event.date}"></td>
+                                    <td th:text="${event.startTime}"></td>
+                                    <td th:text="${event.endTime}"></td>
+                                    <td th:text="${event.assignedSuperFrogEmail}"></td>
+                                    <td class="text-center d-lg-flex justify-content-lg-center">
+                                        <button class="btn btn-primary"
+                                                type="button"
+                                                style="margin-left: 0px;margin-right: 5px;"
+                                                data-toggle="modal"
+                                                th:attr="data-target=${'#eventEditModal' + event.id}"
+                                                data-row="${event}"
+                                        >Edit</button>
+                                    </td>
+                                </tr>
+                                <tr></tr>
+                                </tbody>
+                                <tfoot>
+                                <tr>
+                                    <td><strong>ID</strong></td>
+                                    <td><strong>Title</strong></td>
+                                    <td><strong>Date</strong></td>
+                                    <td><strong>Start Time</strong></td>
+                                    <td><strong>End Time</strong></td>
+                                    <td><strong>SuperFrog Email</strong></td>
+                                    <td class="text-center"><strong>Operation</strong></td>
+                                </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <hr sec:authorize="hasAuthority('CUSTOMER')" th:if="${!myUpcomingEvents.isEmpty()}" />
+
             <section class="features-boxed" style="background: var(--fc-list-event-hover-bg-color);">
                 <div class="container" style="color: var(--purple);background: var(--fc-list-event-hover-bg-color);">
                     <div class="intro">
@@ -109,7 +168,87 @@
                     </div>
                 </div>
             </section>
+            
+        <!-- Edit Event Modal-->
+        <div role="dialog" tabindex="-1"
+             class="modal show"
+             id="edit-customer-modal"
+             style="max-width: 500px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); overflow-y: auto;"
+             th:each="event: ${myUpcomingEvents}" th:attr="id=${'eventEditModal' + event.getId()}">
+            <div role="document">
+                <div class="modal-content">
+                    <div class="modal-header d-lg-flex">
+                        <h4 class="modal-title d-lg-flex">Edit Event</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form method="post" th:action="@{/editEvent}" th:object="${editEvent}">
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">ID: </label>
+                                    <input th:name="id" th:value="${event.getId()}" class="form-control" readonly />
+                                </div>
+                            </div>
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">Title</label>
+                                    <input th:name="title"
+                                           th:value="${editEvent.title != null} ? ${editEvent.title} : ${event.title}"
+                                           type="text"
+                                           class="form-control"
+                                           style="padding-top: 0px;" />
+                                </div>
+                            </div>
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">Description</label>
+                                    <input th:name="description"
+                                           th:value="${editEvent.description != null} ? ${editEvent.description} : ${event.description}"
+                                           type="textarea"
+                                           class="form-control"
+                                           style="padding-top: 0px;" />
+                                </div>
+                            </div>
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">Date</label>
+                                    <input th:name="date"
+                                           th:value="${editEvent.date != null} ? ${editEvent.date} : ${event.date}"
+                                           type="text"
+                                           class="form-control"
+                                           style="padding-top: 0px;" />
+                                </div>
+                            </div>
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">Start Time</label>
+                                    <input th:name="startTime"
+                                           th:value="${editEvent.startTime != null} ? ${editEvent.startTime} : ${event.startTime}"
+                                           type="text"
+                                           class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-row" style="padding-bottom: 10px;">
+                                <div class="col">
+                                    <label style="font-weight: bold;">End Time</label>
+                                    <input th:name="endTime"
+                                           th:value="${editEvent.endTime != null} ? ${editEvent.endTime} : ${event.endTime}"
+                                           type="text"
+                                           class="form-control" />
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-light" type="button" data-dismiss="modal">Close</button>
+                                <button class="btn btn-primary" type="submit" style="background: var(--purple);">Save</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
+
         <footer class="bg-white sticky-footer">
             <div class="container my-auto">
                 <div class="text-center my-auto copyright"><span>Copyright © Brand 2021</span></div>
